# sg800m

./: LICENSE  README.md  pyproject.toml
config/: simSettings.json
sg800m/: reader.py
usage/: main.py
